[gd_scene load_steps=5 format=3 uid="uid://cx1ypmps7i3tn"]

[ext_resource type="Script" path="res://Scripts/Development/battle_debug_setup.gd" id="1_m3h17"]
[ext_resource type="Resource" uid="uid://byhcrnn41k1aa" path="res://Resources/Tests/Battle_setups/pvp_EvsO_basic.tres" id="2_ahbvw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5oah4"]
bg_color = Color(0, 0.341176, 0.219608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tn1ik"]
bg_color = Color(0.396078, 0.0784314, 0, 1)

[node name="UiBattleDebugSetup" type="CanvasLayer"]
script = ExtResource("1_m3h17")
default_battle_setup = ExtResource("2_ahbvw")

[node name="MapsList" type="OptionButton" parent="."]
offset_left = 227.0
offset_top = 129.0
offset_right = 1822.0
offset_bottom = 181.0

[node name="PresetsList" type="OptionButton" parent="."]
offset_left = 224.0
offset_top = 55.0
offset_right = 1819.0
offset_bottom = 107.0

[node name="Button" type="Button" parent="."]
offset_left = 1026.0
offset_top = 868.0
offset_right = 1585.0
offset_bottom = 961.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_5oah4")
text = "Play"

[node name="Button2" type="Button" parent="."]
offset_left = 197.0
offset_top = 853.0
offset_right = 756.0
offset_bottom = 946.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_tn1ik")
text = "Save"

[node name="PlayerName1" type="TextEdit" parent="."]
offset_left = 141.0
offset_top = 227.0
offset_right = 657.0
offset_bottom = 313.0
text = "elf_player"

[node name="PlayerName2" type="TextEdit" parent="."]
offset_left = 1124.0
offset_top = 233.0
offset_right = 1505.0
offset_bottom = 301.0
text = "orc_player"

[node name="Label2" type="Label" parent="."]
offset_left = 118.0
offset_top = 132.0
offset_right = 210.0
offset_bottom = 174.0
theme_override_font_sizes/font_size = 30
text = "Map"

[node name="Label" type="Label" parent="."]
offset_left = 108.0
offset_top = 59.0
offset_right = 200.0
offset_bottom = 101.0
theme_override_font_sizes/font_size = 30
text = "Preset"

[node name="IsAI1" type="CheckBox" parent="."]
offset_left = 1538.0
offset_top = 229.0
offset_right = 1604.0
offset_bottom = 292.0
button_pressed = true
text = "AI
"

[node name="IsAI2" type="CheckBox" parent="."]
offset_left = 702.0
offset_top = 230.0
offset_right = 768.0
offset_bottom = 293.0
button_pressed = true
text = "AI
"

[node name="VBoxContainer1" type="VBoxContainer" parent="."]
offset_left = 144.0
offset_top = 342.0
offset_right = 644.0
offset_bottom = 837.0

[node name="UnitsList1_1" type="OptionButton" parent="VBoxContainer1"]
layout_mode = 2

[node name="UnitsList1_2" type="OptionButton" parent="VBoxContainer1"]
layout_mode = 2

[node name="UnitsList1_3" type="OptionButton" parent="VBoxContainer1"]
layout_mode = 2

[node name="UnitsList1_4" type="OptionButton" parent="VBoxContainer1"]
layout_mode = 2

[node name="UnitsList1_5" type="OptionButton" parent="VBoxContainer1"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
offset_left = 1013.0
offset_top = 310.0
offset_right = 1613.0
offset_bottom = 750.0

[node name="UnitsList2_1" type="OptionButton" parent="VBoxContainer2"]
layout_mode = 2

[node name="UnitsList2_2" type="OptionButton" parent="VBoxContainer2"]
layout_mode = 2

[node name="UnitsList2_3" type="OptionButton" parent="VBoxContainer2"]
layout_mode = 2

[node name="UnitsList2_4" type="OptionButton" parent="VBoxContainer2"]
layout_mode = 2

[node name="UnitsList2_5" type="OptionButton" parent="VBoxContainer2"]
layout_mode = 2

[connection signal="item_selected" from="PresetsList" to="." method="_on_presets_list_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_save_button_pressed"]
